--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   width: 100%;
   height: 100vh;
   font-family: 'Goudy Bookletter 1911', serif;
-  font-size: 2em;
+  font-size: 1.8em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,4 +20,31 @@ body {
   border: solid 1px;
   background: #FFFBF0;
   box-shadow: 10px 10px 15px -10px rgba(0,0,0,0.8);
+}
+
+.book:hover {
+  transform: scale(1.05);
+}
+
+button {
+  border: solid 1px black;
+  box-shadow: none;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 8px;
+  margin: 10px;
+  font-size: .5em;
+  font-family: 'Goudy Bookletter 1911', serif;
+  background: #857552;
+  color: #FFFBF0;
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
+button:active, button:focus {
+  color: #FFFBF0;
+  transform: scale(0.98);
 }
