--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
   right: 5px;
   padding: 0 5px;
   margin: 0;
-  font-size: .6em;
+  font-size: .7em;
   display: inline-block;
   background: #FFFBF0;
   color: #857552;
@@ -71,4 +71,93 @@ body {
   border-radius: 5px;
   cursor: pointer;
   font-size: 0.7em;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+  background: #FFFBF0;
+  margin: 5% auto;
+  padding: 25px;
+  border: 1px solid #857552;
+  width: 60%;
+  text-align: center;
+}
+
+#closeModal {
+  color: #857552;
+  float: right;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  background: #FFFBF0;
+  font-size: .7em;
+  display: inline-block;
+}
+
+#closeModal:hover, #closeModal:focus {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+input[type=text], input[type=number] {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 10px 0;
+  display: inline-block;
+  border: 1px solid #857552;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.checkcontainer {
+  display: block;
+  font-size: .7em;
+  margin: 10px auto;
+}
+
+
+input[type=submit] {
+  border: solid 1px black;
+  box-shadow: none;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 8px;
+  margin: 10px;
+  font-size: .5em;
+  font-family: 'Goudy Bookletter 1911', serif;
+  background: #857552;
+  color: #FFFBF0;
+}
+
+input[type=submit]:hover {
+  transform: scale(1.1);
+}
+
+input[type=submit]:active, input[type=submit] {
+  color: #FFFBF0;
+  transform: scale(0.98);
 }
