--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
   flex-direction: column;
   align-items: center;
   background: #FEF5E1;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #container {
@@ -82,7 +84,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.5); 
+  background-color: rgba(0,0,0,0.5);
 }
 
 .modal-content {
